add_executable(12-pbr-shading pbr-shading.cpp)
target_link_libraries(12-pbr-shading PUBLIC rndr)
target_link_libraries(12-pbr-shading PRIVATE rndr_options)
set_target_properties(12-pbr-shading PROPERTIES FOLDER Examples)
target_compile_definitions(12-pbr-shading PUBLIC -DASSETS_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../assets/")
target_compile_definitions(12-pbr-shading PUBLIC -DGLTF_SAMPLE_ASSETS_DIR="${GLTF_ASSETS_DIR}/")
